unpackaged/objects/Leave_Request__c.object
<CustomObject>
    <description>Use it to apply leave</description>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Type__c</fullName>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Leave_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Leave__c</fullName>
        <label>Reason for Leave</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <label>Leave Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Leave Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>